--- a/front-end-angular/src/app/components/product-list/product-list-table.component.html
+++ b/front-end-angular/src/app/components/product-list/product-list-table.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <table class="table">
+  <table class="table table-striped">
     <thead class="thead-dark">
       <tr>
         <th></th>
