--- a/front-end-angular/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/front-end-angular/src/app/components/product-category-menu/product-category-menu.component.html
@@ -3,7 +3,9 @@
     <ul class="list-unstyled navbar-list">
       <li *ngFor="let tempProductCategory of productCategories">
         <a
-          routerLink="/category/{{ tempProductCategory.id }}"
+          routerLink="/category/{{ tempProductCategory.id }}/{{
+            tempProductCategory.categoryName
+          }}"
           routerLinkActive="active-link"
         >
           {{ tempProductCategory.categoryName }}
