--- a/front-end-angular/src/styles.css
+++ b/front-end-angular/src/styles.css
@@ -560,7 +560,7 @@ input.au-input.au-input-xl {
 .price {
   margin: 15px 0 0;
   font-weight: 800;
-  color: #0da8e4;
+  color: #199ccf;
 }
 .product-box h1 {
   font-size: 18px;
