--- a/front-end-angular/src/app/components/search/search.component.html
+++ b/front-end-angular/src/app/components/search/search.component.html
@@ -8,7 +8,7 @@
   <input
     #myInput
     type="text"
-    placeholder="Search for data ..."
+    placeholder="Search for products ..."
     class="au-input au-input-xl"
     (keyup.enter)="doSearch(myInput.value)"
   />
