created cart-status component, added the component html to start working with and crated the click event method when the user click on the "add to cart" button

--- a/front-end-angular/src/app/components/product-list/product-list-grid.component.html
+++ b/front-end-angular/src/app/components/product-list/product-list-grid.component.html
@@ -16,7 +16,12 @@
             <div class="price">
               {{ tempProduct.unitPrice | currency: "USD" }}
             </div>
-            <a href="#" class="primary-btn">Add to cart</a>
+            <button
+              (click)="addToCart(tempProduct)"
+              class="btn btn-primary btn-sm"
+            >
+              Add to cart
+            </button>
           </div>
         </div>
 
