--- a/front-end-angular/src/app/components/cart-details/cart-details.component.html
+++ b/front-end-angular/src/app/components/cart-details/cart-details.component.html
@@ -24,7 +24,40 @@
             <td>
               <div class="items">
                 <label> Quantity: </label> {{ tempCartItem.quantity }}
+
+                <div class="row no-gutters">
+                  <div class="col">
+                    <button
+                      (click)="incrementQuantity(tempCartItem)"
+                      class="btn btn-primary btn-sm"
+                    >
+                      <i class="fas fa-plus"></i>
+                    </button>
+                  </div>
+
+                  <div class="col ml-4 mr-2">
+                    {{ tempCartItem.quantity }}
+                  </div>
+                  <div class="col">
+                    <button
+                      (click)="decrementQuantity(tempCartItem)"
+                      class="btn btn-primary btn-sm"
+                    >
+                      <i class="fas fa-minus"></i>
+                    </button>
+                  </div>
+
+                  <div class="col-8"></div>
+                </div>
               </div>
+
+              <button
+                (click)="remove(tempCartItem)"
+                class="btn btn-primary btn-sm mt-2"
+              >
+                Remove
+              </button>
+
               <p class="mt-2">
                 Subtotal:
                 {{
