--- a/front-end-angular/src/app/components/cart-details/cart-details.component.html
+++ b/front-end-angular/src/app/components/cart-details/cart-details.component.html
@@ -73,6 +73,9 @@
               <p>Total Quantity: {{ totalQuantity }}</p>
               <p>Shipping FREE</p>
               <p>Total Price: {{ totalPrice | currency: "EUR" }}</p>
+              <button routerLink="/checkout" class="btn btn-primary btn-sm">
+                Checkout
+              </button>
             </td>
           </tr>
         </table>
