created Country and state classes, added methods to the formService for countries and states. updated checkout component. update html template to populate drop-down lists for countries and states. fixed bug in the billing address same as shipping address checkbox

--- a/front-end-angular/src/app/components/checkout/checkout.component.html
+++ b/front-end-angular/src/app/components/checkout/checkout.component.html
@@ -2,35 +2,30 @@
   <div class="section-content section-content-p30">
     <div class="container-fluid">
       <form [formGroup]="checkoutFormGroup" (ngSubmit)="onSubmit()">
-        <!--  costumer form group  -->
-        <div class="form-area" formGroupName="customer">
-          <h3>Costumer</h3>
-          <div class="row">
-            <div class="col-md-2">
-              <label>First Name</label>
-            </div>
+        <!-- customer form group -->
+        <div formGroupName="customer" class="form-area">
+          <h3>Customer</h3>
 
+          <div class="row">
+            <div class="col-md-2"><label>First Name</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="firstName" type="text" />
               </div>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-md-2">
-              <label>Last Name</label>
-            </div>
+            <div class="col-md-2"><label>Last Name</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="lastName" type="text" />
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-2">
-              <label>Email</label>
-            </div>
 
+          <div class="row">
+            <div class="col-md-2"><label>Email</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="email" type="text" />
@@ -38,45 +33,38 @@
             </div>
           </div>
         </div>
-      </form>
-    </div>
-  </div>
 
-  <!--   ADDRESS FORM   -->
-  <div class="section-content section-content-p30">
-    <div class="container-fluid">
-      <form [formGroup]="checkoutFormGroup">
-        <div class="form-area" formGroupName="shippingAddress">
+        <!-- shipping Address -->
+        <div formGroupName="shippingAddress" class="form-area">
           <h3>Shipping Address</h3>
-          <div class="row">
-            <div class="col-md-2">
-              <label> Country </label>
-            </div>
 
+          <div class="row">
+            <div class="col-md-2"><label>Country</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select name="" id="" formControlName="country">
-                  <option>TO DO</option>
+                <select
+                  formControlName="country"
+                  (change)="getStates('shippingAddress')"
+                >
+                  <option *ngFor="let country of countries" [ngValue]="country">
+                    {{ country.name }}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label> Street</label>
-            </div>
+            <div class="col-md-2"><label>Street</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-2">
-              <label>City</label>
-            </div>
 
+          <div class="row">
+            <div class="col-md-2"><label>City</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
@@ -85,24 +73,23 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label> State </label>
-            </div>
-
+            <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select name="" id="" formControlName="state">
-                  <option>TO DO</option>
+                <select formControlName="state">
+                  <option
+                    *ngFor="let state of shippingAddressStates"
+                    [ngValue]="state"
+                  >
+                    {{ state.name }}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label>Zip Code</label>
-            </div>
-
+            <div class="col-md-2"><label>Zip Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
@@ -111,8 +98,7 @@
           </div>
         </div>
 
-        <!--   add check box to copy copy shipping address to billing address -->
-
+        <!-- Add check box to copy shipping to billing -->
         <div class="input-space">
           <label class="au-checkbox">
             <input
@@ -124,38 +110,37 @@
           </label>
         </div>
 
-        <!--   BILLING ADDRESS  -->
-        <div class="form-area" formGroupName="billingAddress">
+        <!-- Billing Address -->
+        <div formGroupName="billingAddress" class="form-area">
           <h3>Billing Address</h3>
-          <div class="row">
-            <div class="col-md-2">
-              <label> Country </label>
-            </div>
 
+          <div class="row">
+            <div class="col-md-2"><label>Country</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select name="" id="" formControlName="country">
-                  <option>TO DO</option>
+                <select
+                  formControlName="country"
+                  (change)="getStates('billingAddress')"
+                >
+                  <option *ngFor="let country of countries" [ngValue]="country">
+                    {{ country.name }}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label> Street</label>
-            </div>
+            <div class="col-md-2"><label>Street</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-2">
-              <label>City</label>
-            </div>
 
+          <div class="row">
+            <div class="col-md-2"><label>City</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
@@ -164,24 +149,23 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label> State </label>
-            </div>
-
+            <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select name="" id="" formControlName="state">
-                  <option>TO DO</option>
+                <select formControlName="state">
+                  <option
+                    *ngFor="let state of billingAddressStates"
+                    [ngValue]="state"
+                  >
+                    {{ state.name }}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2">
-              <label>Zip Code</label>
-            </div>
-
+            <div class="col-md-2"><label>Zip Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
@@ -190,8 +174,7 @@
           </div>
         </div>
 
-        <!--   CREDIT CARD   -->
-
+        <!-- Credit Card -->
         <div formGroupName="creditCard" class="form-area">
           <h3>Credit Card</h3>
 
@@ -239,8 +222,8 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationMonth">
-                  <option *ngFor="let tempMonth of creditCardMonths">
-                    {{ tempMonth }}
+                  <option *ngFor="let month of creditCardMonths">
+                    {{ month }}
                   </option>
                 </select>
               </div>
@@ -255,8 +238,8 @@
                   formControlName="expirationYear"
                   (change)="handleMonthsAndYears()"
                 >
-                  <option *ngFor="let tempYear of creditCardYears">
-                    {{ tempYear }}
+                  <option *ngFor="let year of creditCardYears">
+                    {{ year }}
                   </option>
                 </select>
               </div>
@@ -264,8 +247,7 @@
           </div>
         </div>
 
-        <!--  ODER DETAILS  -->
-
+        <!-- Order details -->
         <div class="form-area">
           <h3>Review Your Order</h3>
 
@@ -274,7 +256,7 @@
           <p>Total Price: {{ totalPrice | currency: "EUR" }}</p>
         </div>
 
-        <!--   SUBMIT BUTTON   -->
+        <!-- submit button-->
         <div class="text-center">
           <button type="submit" class="btn btn-info">Purchase</button>
         </div>
