--- a/front-end-angular/src/app/components/checkout/checkout.component.html
+++ b/front-end-angular/src/app/components/checkout/checkout.component.html
@@ -18,7 +18,12 @@
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="firstName.errors.required">
+                  <div
+                    *ngIf="
+                      firstName.errors.required ||
+                      firstName.errors.notOnlyWhiteSpace
+                    "
+                  >
                     First Name is required
                   </div>
 
@@ -42,7 +47,12 @@
                   "
                   class="alert alert-danger mt-1"
                 >
-                  <div *ngIf="lastName.errors.required">
+                  <div
+                    *ngIf="
+                      lastName.errors.required ||
+                      lastName.errors.notOnlyWhiteSpace
+                    "
+                  >
                     Last Name is required
                   </div>
 
