--- a/front-end-angular/src/app/components/checkout/checkout.component.html
+++ b/front-end-angular/src/app/components/checkout/checkout.component.html
@@ -101,6 +101,24 @@
                     {{ country.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    shippingAddressCountry.invalid &&
+                    (shippingAddressCountry.dirty ||
+                      shippingAddressCountry.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      shippingAddressCountry.errors.required ||
+                      shippingAddressCountry.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Country is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -110,6 +128,28 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
+
+                <div
+                  *ngIf="
+                    shippingAddressStreet.invalid &&
+                    (shippingAddressStreet.dirty ||
+                      shippingAddressStreet.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      shippingAddressStreet.errors.required ||
+                      shippingAddressStreet.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Street is required
+                  </div>
+
+                  <div *ngIf="shippingAddressStreet.errors.minlength">
+                    Invalid Street
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -119,6 +159,27 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
+
+                <div
+                  *ngIf="
+                    shippingAddressCity.invalid &&
+                    (shippingAddressCity.dirty || shippingAddressCity.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      shippingAddressCity.errors.required ||
+                      shippingAddressCity.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    City is required
+                  </div>
+
+                  <div *ngIf="shippingAddressCity.errors.minlength">
+                    Invalid City
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -135,6 +196,23 @@
                     {{ state.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    shippingAddressState.invalid &&
+                    (shippingAddressState.dirty || shippingAddressState.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      shippingAddressState.errors.required ||
+                      shippingAddressState.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    State is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -144,6 +222,28 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
+
+                <div
+                  *ngIf="
+                    shippingAddressZipCode.invalid &&
+                    (shippingAddressZipCode.dirty ||
+                      shippingAddressZipCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      shippingAddressZipCode.errors.required ||
+                      shippingAddressZipCode.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Zip Code is required
+                  </div>
+
+                  <div *ngIf="shippingAddressZipCode.errors.minlength">
+                    Invalid Zip Code
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -177,6 +277,24 @@
                     {{ country.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    billingAddressCountry.invalid &&
+                    (billingAddressCountry.dirty ||
+                      billingAddressCountry.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      billingAddressCountry.errors.required ||
+                      billingAddressCountry.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Country is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -186,6 +304,27 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="street" type="text" />
+
+                <div
+                  *ngIf="
+                    billingAddressStreet.invalid &&
+                    (billingAddressStreet.dirty || billingAddressStreet.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      billingAddressStreet.errors.required ||
+                      billingAddressStreet.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Street is required
+                  </div>
+
+                  <div *ngIf="billingAddressStreet.errors.minlength">
+                    Invalid Street
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -195,6 +334,27 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="city" type="text" />
+
+                <div
+                  *ngIf="
+                    billingAddressCity.invalid &&
+                    (billingAddressCity.dirty || billingAddressCity.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      billingAddressCity.errors.required ||
+                      billingAddressCity.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    City is required
+                  </div>
+
+                  <div *ngIf="billingAddressCity.errors.minlength">
+                    Invalid City
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -211,6 +371,23 @@
                     {{ state.name }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    billingAddressState.invalid &&
+                    (billingAddressState.dirty || billingAddressState.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      billingAddressState.errors.required ||
+                      billingAddressState.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    State is required
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -220,6 +397,28 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="zipCode" type="text" />
+
+                <div
+                  *ngIf="
+                    billingAddressZipCode.invalid &&
+                    (billingAddressZipCode.dirty ||
+                      billingAddressZipCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      billingAddressZipCode.errors.required ||
+                      billingAddressZipCode.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Zip code is required
+                  </div>
+
+                  <div *ngIf="billingAddressZipCode.errors.minlength">
+                    Invalid Zip Code
+                  </div>
+                </div>
               </div>
             </div>
           </div>
