--- a/front-end-angular/src/app/components/checkout/checkout.component.html
+++ b/front-end-angular/src/app/components/checkout/checkout.component.html
@@ -436,6 +436,23 @@
                   <option>Visa</option>
                   <option>Mastercard</option>
                 </select>
+
+                <div
+                  *ngIf="
+                    creditCardType.invalid &&
+                    (creditCardType.dirty || creditCardType.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      creditCardType.errors.required ||
+                      creditCardType.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Required Credit card type
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -445,6 +462,27 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="nameOnCard" type="text" />
+
+                <div
+                  *ngIf="
+                    creditCardName.invalid &&
+                    (creditCardName.dirty || creditCardName.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      creditCardName.errors.required ||
+                      creditCardName.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Name is required
+                  </div>
+
+                  <div *ngIf="creditCardName.errors.minlength">
+                    Invalid Name
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -454,6 +492,22 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="cardNumber" type="text" />
+
+                <div
+                  *ngIf="
+                    creditCardNumber.invalid &&
+                    (creditCardNumber.dirty || creditCardNumber.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="creditCardNumber.errors.required">
+                    Card number is required
+                  </div>
+
+                  <div *ngIf="creditCardNumber.errors.pattern">
+                    Invalid format
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -463,6 +517,23 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="securityCode" type="text" />
+
+                <div
+                  *ngIf="
+                    creditCardSecurityCode.invalid &&
+                    (creditCardSecurityCode.dirty ||
+                      creditCardSecurityCode.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div *ngIf="creditCardSecurityCode.errors.required">
+                    Security code required
+                  </div>
+
+                  <div *ngIf="creditCardSecurityCode.errors.pattern">
+                    Invalid format
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -476,6 +547,24 @@
                     {{ month }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    creditCardExpirationMonth.invalid &&
+                    (creditCardExpirationMonth.dirty ||
+                      creditCardExpirationMonth.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      creditCardExpirationMonth.errors.required ||
+                      creditCardExpirationMonth.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Required Date
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -492,6 +581,24 @@
                     {{ year }}
                   </option>
                 </select>
+
+                <div
+                  *ngIf="
+                    creditCardExpirationYear.invalid &&
+                    (creditCardExpirationYear.dirty ||
+                      creditCardExpirationYear.touched)
+                  "
+                  class="alert alert-danger mt-1"
+                >
+                  <div
+                    *ngIf="
+                      creditCardExpirationYear.errors.required ||
+                      creditCardExpirationYear.errors.notOnlyWhiteSpace
+                    "
+                  >
+                    Required Date
+                  </div>
+                </div>
               </div>
             </div>
           </div>
