--- a/front-end-angular/src/app/components/product-list/product-list-grid.component.html
+++ b/front-end-angular/src/app/components/product-list/product-list-grid.component.html
@@ -14,7 +14,7 @@
             </a>
 
             <div class="price">
-              {{ tempProduct.unitPrice | currency: "USD" }}
+              {{ tempProduct.unitPrice | currency: "EUR" }}
             </div>
             <button
               (click)="addToCart(tempProduct)"
