--- a/front-end-angular/src/app/app.component.html
+++ b/front-end-angular/src/app/app.component.html
@@ -15,6 +15,8 @@
   <!-- END MENU SIDEBAR-->
 
   <!-- PAGE CONTAINER-->
+
+  <!-- HEADER DESKTOP-->
   <div class="page-container">
     <!-- HEADER DESKTOP-->
     <header class="header-desktop">
@@ -22,6 +24,8 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
+
+            <app-login-status></app-login-status>
 
             <app-cart-status></app-cart-status>
           </div>
