--- a/front-end-angular/src/app/components/login-status/login-status.component.html
+++ b/front-end-angular/src/app/components/login-status/login-status.component.html
@@ -9,4 +9,8 @@
   <button *ngIf="isAuthenticated" (click)="logout()" class="security-btn">
     Logout
   </button>
+
+  <button *ngIf="isAuthenticated" routerLink="/members" class="security-btn">
+    Member
+  </button>
 </div>
